--- a/doc/main_RF.Rmd
+++ b/doc/main_RF.Rmd
@@ -74,6 +74,8 @@ library(WeightedROC)
 library(gbm)
 library(randomForest)
 library(ranger)
+library(ROSE)
+library(rpart)
 ```
 
 ### Step 0 set work directories
@@ -124,7 +126,7 @@ hyper_grid_RF<- expand.grid(
  ntree=seq(100,300,by=50),
  mtry=seq(39,234,by=39)# start from 1/2sqrt(q) to 3sqrt(q)
 
-)# the parameter mtry is often sensible, we only use the ntree as the tunning parameter 
+)
 dim(hyper_grid_RF)
 ```
 
@@ -195,15 +197,15 @@ if(run.feature.test){
 }else{
   load(file="../output/feature_test.RData")
 }
-
-
+levels(dat_train$label)
+levels(dat_test$label)
 ```
 
 
 
 ### Step 4: Train a classification model with training features and responses
-Call the train model and test model from library. 
 
+### i. Random Forest
 + `train_RF.R`
   + Input: a data frame containing features and labels and a parameter list.
   + Output:a trained model
@@ -213,8 +215,9 @@ Call the train model and test model from library.
   + Output: training model specification
 
 + Do Random forest tunning parameter searching using three parameters:
-  + n.tree:
-  + mtry:
+  + n.tree: number of trees. want enough trees to stablize the error but using too many trees is unnecssraily inefficient
+  + mtry: the number of varaibles to randonly sample as candidates at each split.
+  + nodesize: minimun number of samples within the terminal nodes.Controls the complexity of the trees. Bigger node size allows for deeper, more complex trees and smaller node results in shadow trees. Bias-varaince trade-off because the deeper trees introduce more varaince, and shallower trees introduce more bias. 
 
 
 ```{r loadlib_RF}
@@ -240,7 +243,7 @@ if(run.cv.RF){
   res_cv_RF <- matrix(0, nrow = nrow(hyper_grid_RF), ncol = 4)
   for(i in 1:nrow(hyper_grid_RF)){
     cat("n_tree =", hyper_grid_RF$ntree[i],
-        ", mtry=", hyper_grid_RF$mtry[i], "\n")
+        ", mtry=", hyper_grid_RF$mtry[i],"\n")
     res_cv_RF[i,] <- cv.function(features = feature_train, 
                               labels = label_train, K, 
                               num_tree=hyper_grid_RF$ntree[i],
@@ -276,16 +279,30 @@ par_best_mtry<- par_best_RF$mtry
 * Train the model with the entire training set using the selected model (model parameter) via cross-validation.
 ```{r final_train_RF}
 #training weights
-for (v in unique(label_train)){
- weight_train[label_train == v] = 0.5 * length(label_train) / length(label_train[label_train == v])
-}
+if (run.train.RF) {
+  weight_train <- rep(NA, length(label_train))
+  for (v in unique(label_train)){
+    weight_train[label_train == v] = 
+      0.5 * length(label_train) / length(label_train[label_train == v])
+  }
 
-if (sample.reweight){
- tm_train_RF <- system.time(fit_train_RF <- train(feature_train, label_train, w = weight_train, num_tree=par_best_ntree,mtry=par_best_mtry))
-} else {
-  tm_train_RF <- system.time(fit_train_RF <- train(feature_train, label_train,NULL,num_tree=par_best_ntree,mtry=par_best_mtry))
- }
-save(fit_train_RF, file="../output/fit_train_RF.RData")
+  if (sample.reweight){
+    tm_train_RF <- system.time(
+      fit_train_RF <- train(features = feature_train, labels = label_train,
+                                 w =  weight_train,
+                                 num_tree =par_best_ntree,
+                                 mtry=par_best_mtry))
+  }else{
+    tm_train_RF <- system.time(
+      fit_train_RF <- train(features = feature_train, labels = label_train,
+                                 w =  NULL, 
+                                num_tree =par_best_ntree,
+                                 mtry=par_best_mtry))
+  }
+  save(fit_train_RF, tm_train_RF, file="../output/fit_train_RF.RData")
+}else {
+  load(file="../output/fit_train_RF.RData")
+}
 ```
 
 ### Step 5: Run test on test images
@@ -307,7 +324,6 @@ weight_test <- rep(NA, length(label_test))
 for (v in unique(label_test)){
  weight_test[label_test == v] = 0.5 * length(label_test) / length(label_test[label_test == v])
 }
- label_test<-ifelse(label_test==2,0,1)
 accu <- sum(weight_test * (label_pred == label_test)) / sum(weight_test)
  label_pred<-as.numeric(label_pred)
 tpr.fpr <- WeightedROC(label_pred, label_test, weight_test)
