--- a/doc/main_XGS.Rmd
+++ b/doc/main_XGS.Rmd
@@ -99,9 +99,9 @@ In this chunk, we have a set of controls for the evaluation experiments.
 run.cv <- FALSE # run cross-validation on the training set
 sample.reweight <- TRUE # run sample reweighting in model training
 K <- 5  # number of CV folds
-run.feature.train <- TRUE # process features for training set
-run.test <- TRUE # run evaluation on an independent test set
-run.feature.test <- TRUE # process features for test set
+run.feature.train <- FALSE # process features for training set
+run.test <- FALSE # run evaluation on an independent test set
+run.feature.test <- FALSE # process features for test set
 ```
 
 Using cross-validation or independent test set evaluation, we compare the performance of models with different specifications. In this Starter Code, we tune parameter lambda (the amount of shrinkage) for logistic regression with LASSO penalty.
@@ -268,8 +268,8 @@ save(confM,auc,mat,file="../output/res_cv_XGS.toy.RData")
 ```{r XGBtune_Step2}
 #try to find the max depth and min child weight 
 #source("../lib/cross_validation_XGS.R")
-hyper_grid_XGB_1<- expand.grid(max_depth=3,#seq(3,10,by=2),
-                              min_child_weight=1,#seq(1,6,by=2),
+hyper_grid_XGB_1<- expand.grid(max_depth=seq(3,10,by=2),
+                              min_child_weight=seq(1,6,by=2),
                               subsample=0.8, 
                               colsample_bytree=0.8
                                )
@@ -277,10 +277,58 @@ parallelStartSocket(cpus = detectCores())
 dim(hyper_grid_XGB_1)
 feature_train = as.matrix(dat_train[, -6007])
 label_train = as.integer(dat_train$label) 
-run.cv.XGS1=TRUE
+run.cv.XGS1=FALSE
 if(run.cv.XGS1){
   res_cv_XGS1 <- matrix(0, nrow = nrow(hyper_grid_XGB_1), ncol = 4)
   for(i in 1:nrow(hyper_grid_XGB_1)){
+    l<-list(max_depth=hyper_grid_XGB_1$max_depth[i],
+            min_child_weight=hyper_grid_XGB_1$min_child_weight[i],
+            subsample=hyper_grid_XGB_1$subsample[i],
+            colsample_bytree=hyper_grid_XGB_1$colsample_bytree[i])
+    xgbcv<-xgb.cv( params = l,
+          data = dtrain, 
+          nrounds = 160, 
+          nfold = K, 
+          gamma=0,
+          showsd = T, 
+          stratified = T, 
+          early_stop_round = 10,
+          print_every_n=80,
+          eval_metric="auc",
+          eval_metric="error",
+          booster = "gbtree",
+          objective = "binary:logistic", 
+          scale_pos_weight=sumwneg/sumwpos,#because the data is imbalanced 
+          eta=0.3
+          )
+    result<-xgbcv$evaluation_log
+    cv.error<-result$test_error_mean
+    cv.AUC<-result$test_auc_mean
+    res_cv_XGS1[i,1]<-mean(cv.error)
+    res_cv_XGS1[i,2]<-sd(cv.error)
+    res_cv_XGS1[i,3]<-mean(cv.AUC)
+    res_cv_XGS1[i,4]<-sd(cv.AUC)
+  save(res_cv_XGS1, file="../output/res_cv_XGS1.RData")
+  }
+}else{
+  load("../output/res_cv_XGS1.RData")
+}
+#do some visualization 
+colnames(res_cv_XGS1)<-c("mean_error", "sd_error", "mean_AUC", "sd_AUC")
+result1<-cbind(hyper_grid_XGB_1[,1:2],res_cv_XGS1)
+# use the output, pick the best max_depth, and min_child_weight using auc
+#maybe try to set min_children_weight to 0.5,1,1.5, and max_depth to 8,9,10
+hyper_grid_XGB_2<- expand.grid(max_depth=c(8,9,10),
+                              min_child_weight=c(0.5,1,1.5),
+                              subsample=0.8, 
+                              colsample_bytree=0.8
+                               )
+parallelStartSocket(cpus = detectCores())
+dim(hyper_grid_XGB_2)
+run.cv.XGS2=TRUE
+if(run.cv.XGS2){
+  res_cv_XGS2 <- matrix(0, nrow = nrow(hyper_grid_XGB_2), ncol = 4)
+  for(i in 1:nrow(hyper_grid_XGB_2)){
     l<-list(max_depth=hyper_grid_XGB_1$max_depth[i],
             min_child_weight=hyper_grid_XGB_1$min_child_weight[i],
             subsample=hyper_grid_XGB_1$subsample[i],
@@ -304,19 +352,22 @@ if(run.cv.XGS1){
     result<-xgbcv$evaluation_log
     cv.error<-result$test_error_mean
     cv.AUC<-result$test_auc_mean
-    res_cv_XGS1[i]<-c(mean(cv.error),sd(cv.error), mean(cv.AUC), sd(cv.AUC))
-  save(res_cv_XGS1, file="../output/res_cv_XGS1.RData")
+    res_cv_XGS2[i,1]<-mean(cv.error)
+    res_cv_XGS2[i,2]<-sd(cv.error)
+    res_cv_XGS2[i,3]<-mean(cv.AUC)
+    res_cv_XGS2[i,4]<-sd(cv.AUC)
+  save(res_cv_XGS2, file="../output/res_cv_XGS2.RData")
   }
 }else{
-  load("../output/res_cv_XGS1.RData")
+  load("../output/res_cv_XGS2.RData")
 }
 
 ```
 
-```{r}
-#no need to tune gamma
-hyper_grid_XGB_2<- expand.grid(max_depth=par_best_depth),
-                              min_child_weight=par_best_child),
+```{r step2 }
+#tune subsample and colsample
+hyper_grid_XGB_2<- expand.grid(max_depth=par_best_depth,
+                              min_child_weight=par_best_child,
                               subsample=c(0.6,0.7,0.8,0.9), 
                               colsample_bytree=c(0.6,0.7,0.8,0.9)
                                )
@@ -326,8 +377,10 @@ feature_train = as.matrix(dat_train[, -6007])
 label_train = as.integer(dat_train$label) 
 run.cv.XGS2=TRUE
 if(run.cv.XGS2){
-  res_cv_XGS2 <- matrix(0, nrow = nrow(hyper_grid_XGB_1), ncol = 4)
+  res_cv_XGS2 <- matrix(0, nrow = nrow(hyper_grid_XGB_2), ncol = 4)
   for(i in 1:nrow(hyper_grid_XGB_2)){
+    cat("subsample=",hyper_grid_XGB_2$subsample[i],
+        "colsample=",hyper_grid_XGB_2$colsample[i],"\n")
     l<-list(max_depth=hyper_grid_XGB_2$max_depth[i],
             min_child_weight=hyper_grid_XGB_2$min_child_weight[i],
             subsample=hyper_grid_XGB_2$subsample[i],
@@ -350,20 +403,94 @@ if(run.cv.XGS2){
     result<-xgbcv$evaluation_log
     cv.error<-result$test_error_mean
     cv.AUC<-result$test_auc_mean
-    res_cv_XGS2<-c(mean(cv.error),sd(cv.error), mean(cv.AUC), sd(cv.AUC))
+    res_cv_XGS2[i,1]<-mean(cv.error)
+    res_cv_XGS2[i,2]<-sd(cv.error)
+    res_cv_XGS2[i,3]<-mean(cv.AUC)
+    res_cv_XGS2[i,4]<-sd(cv.AUC)
   save(res_cv_XGS2, file="../output/res_cv_XGS2.RData")
   }
 }else{
   load("../output/res_cv_XGS2.RData")
 }
+#do some visualization 
+# use the output, pick the best subsample, and colsample_bytree
+#par_best_subsample<-
+#par_best_colsmaple<-
+```
+
+```{r step 3}
+#tune the regularization parameters using alpha or gamma
+hyper_grid_XGB_3<- expand.grid(max_depth=par_best_depth,
+                              min_child_weight=par_best_child,
+                              subsample=par_best_subsample, 
+                              colsample_bytree=par_best_colsmaple,
+                              #alpha= or try gamma
+                               )
+parallelStartSocket(cpus = detectCores())
+dim(hyper_grid_XGB_3#)
+feature_train = as.matrix(dat_train[, -6007])
+label_train = as.integer(dat_train$label) 
+run.cv.XGS3=TRUE
+if(run.cv.XGS3){
+  res_cv_XGS3 <- matrix(0, nrow = nrow(hyper_grid_XGB_3), ncol = 4)
+  for(i in 1:nrow(hyper_grid_XGB_3)){
+    #cat()
+    l<-list(max_depth=hyper_grid_XGB_3$max_depth[i],
+            min_child_weight=hyper_grid_XGB_3$min_child_weight[i],
+            subsample=hyper_grid_XGB_3$subsample[i],
+            colsample_bytree=hyper_grid_XGB_3$colsample_bytree[i],
+            #alpha= hyper_grid_XGB_3$alpha[i])
+    xgbcv<-xgb.cv( params = l,
+          data = dtrain, 
+          nrounds = 160, 
+          nfold = K, 
+          gamma=0,
+          showsd = T, 
+          stratified = T, 
+          early_stop_round = 20, 
+          eval_metric="auc",
+          eval_metric="error",
+          booster = "gbtree",
+          objective = "binary:logistic", 
+          scale_pos_weight=sumwneg/sumwpos,
+          eta=0.3
+          )
+    result<-xgbcv$evaluation_log
+    cv.error<-result$test_error_mean
+    cv.AUC<-result$test_auc_mean
+    res_cv_XGS3[i,1]<-mean(cv.error)
+    res_cv_XGS3[i,2]<-sd(cv.error)
+    res_cv_XGS3[i,3]<-mean(cv.AUC)
+    res_cv_XGS3[i,4]<-sd(cv.AUC)
+  save(res_cv_XGS3, file="../output/res_cv_XGS3.RData")
+  }
+}else{
+  load("../output/res_cv_XGS3.RData")
+}
+#do some viusalization, pick the best one 
+```
+
+```{r step 4}
+#tune the learning rate, decrease it 
 
 ```
 
-```{r}
-#tune the regularization parameters 
+
+```{r train_model}
 
 ```
 
+```{r test_model}
+
+```
+
+
+
+
+
+
+
+#the followiing just play around another parameters
 ```{r}
  xgb.cv( params = params, data = dtrain, nrounds = 200, nfold = 5, showsd = T, stratified = T, print_every_n = 10, early_stop_round = 20, maximize = F,eval_metric="auc",eval_metric="error")
 
