--- a/doc/main_PCA+LDA.Rmd
+++ b/doc/main_PCA+LDA.Rmd
@@ -90,12 +90,10 @@ In this chunk, we have a set of controls for the evaluation experiments.
 + (T/F) process features for test set
 
 ```{r exp_setup}
-run.cv <- FALSE # run cross-validation on the training set
-sample.reweight <- TRUE # run sample reweighting in model training
 K <- 5  # number of CV folds
-run.feature.train <- FALSE # process features for training set
-run.test <- FALSE # run evaluation on an independent test set
-run.feature.test <- FALSE # process features for test set
+run.feature.train <- TRUE # process features for training set
+run.test <- TRUE # run evaluation on an independent test set
+run.feature.test <- TRUE # process features for test set
 ```
 
 
